# ai-meeting-secretary

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_AUDIT.md  P0_REMEDIATION_PLAN.md  PIPELINE_STABILIZATION_PLAN.md  README.md  RUN_INSTRUCTION.md  alembic.ini  architecture_v2_audit.md  defect_rootcause_report.md  docker-compose.yml  docker_hardening_report.md  meeting_secretary_v2_report.md  priority_fix_plan.md  prompt_audit_report.md  prompt_priority0_implementation_report.md  prompt_priority1a_report.md  prompt_upgrade_plan.md  pyproject.toml  release_readiness_report.md  smoke_test_report.md  test_integration.db
ai_meeting_secretary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_tasks_speaker_confidence.py  0003_transcript_segment_timestamps_float.py  0003_ts_segments_float.py  0004_memory_items.py  0005_memory_items_v2_fields.py  0006_memory_items_v3_validation.py
app/: main.py
app/api/: memory.py  routes.py  schemas.py
app/models/: __init__.py  memory.py
app/schemas/: __init__.py  memory.py
app/services/: alignment_service.py  diarization_service.py  media_service.py  memory_service.py  segmentation_service.py  summary_service.py  task_extraction_service.py  transcript_cleanup_service.py  transcription_service.py  v2_contracts.py
app/workers/: tasks.py
docker/: Dockerfile.api  Dockerfile.worker  entrypoint.sh
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
tests/integration/: test_meeting_pipeline.py  (+1 more)
(+16 files in other folders)
